   - Fixes to image asset manager (Eric Bariaux, related 
     to MODELER-292)
   - MODELER-302: List of widgets does not scroll anymore
     (Eric Bariaux)
   - MODELER-304: UI elements (from panels.obj) restored 
     on login and not when UI designer pane is displayed. 
     "Please wait" message on login only dismissed when 
     UI has been built and initialized. (Eric Bariaux)


 Internal:

  - Upgrade to GXT3


Designer 2.13.7 (2012-10-07 Rosemary)
=====================================

 - Add Z-wave configuration


Designer 2.13.6 (2012-09-20 Rosemary)
=====================================

Bug fix release:
 
 - Increase maximum command field length from 1000
   characters to 4000 characters for UDP, TCP, HTTP
   and Telnet protocols
 - MODELER-379: attempting to delete an already deleted
   device shows up as an error to the user
 - MODELER-380: Log errors related to data integrity
   issues when loading switches for a device
 - Add panStamps lagarto server protocol configuration


Designer 2.13.5 (2012-09-11 Rosemary)
=====================================

Bug fix release:

 - MODELER-376: Log errors related to data integrity 
   issues with commands associated to sensors
 - MODELER-375: Transform macro references to DTOs 
   more defensively and guard against errors


Designer 2.13.4 (2012-07-29 Rosemary)
=====================================

Bug fix release:

 - MODELER-338: correctly reconstruct sensor data from
   database on load/restore


Designer 2.13.3 (2012-07-15 Rosemary)
=====================================

Bug fix release:

 - MODELER-325: resolve transaction issues on save
 - MODELER-326: device command update/delete handling fix
 - MODELER-327: not all commands were correctly included
   in generated controller.xml


Designer 2.13.2 (2012-06-24 Rosemary)
=====================================

Bug fix release:

 - Fixed MODELER-316: Enable gestures to be associated with 
   full macro definitions (XML schema change)