@@ -1,8 +1,7 @@
 package org.openremote.modeler.client.widget.uidesigner;
 
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 
 import org.openremote.modeler.client.event.SubmitEvent;
@@ -23,33 +22,41 @@ import com.extjs.gxt.ui.client.data.BeanModel;
 import com.extjs.gxt.ui.client.event.BaseEvent;
 import com.extjs.gxt.ui.client.event.Events;
 import com.extjs.gxt.ui.client.event.Listener;
-import com.extjs.gxt.ui.client.widget.MessageBox;
-import com.google.gwt.cell.client.ButtonCell;
-import com.google.gwt.cell.client.FieldUpdater;
+import com.google.gwt.cell.client.Cell.Context;
 import com.google.gwt.core.client.GWT;
-import com.google.gwt.event.dom.client.ClickEvent;
-import com.google.gwt.resources.client.ImageResource;
-import com.google.gwt.safehtml.shared.SafeHtml;
-import com.google.gwt.safehtml.shared.SafeHtmlBuilder;
-import com.google.gwt.safehtml.shared.SafeHtmlUtils;
+import com.google.gwt.editor.client.Editor.Path;
 import com.google.gwt.uibinder.client.UiBinder;
 import com.google.gwt.uibinder.client.UiFactory;
 import com.google.gwt.uibinder.client.UiField;
 import com.google.gwt.uibinder.client.UiHandler;
-import com.google.gwt.user.cellview.client.CellTable;
-import com.google.gwt.user.cellview.client.Column;
-import com.google.gwt.user.cellview.client.TextColumn;
 import com.google.gwt.user.client.rpc.AsyncCallback;
-import com.google.gwt.user.client.ui.AbstractImagePrototype;
-import com.google.gwt.user.client.ui.Button;
-import com.google.gwt.user.client.ui.DialogBox;
-import com.google.gwt.user.client.ui.DockLayoutPanel;
 import com.google.gwt.user.client.ui.Image;
 import com.google.gwt.user.client.ui.Widget;
-import com.google.gwt.view.client.SelectionChangeEvent;
-import com.google.gwt.view.client.SingleSelectionModel;
+import com.sencha.gxt.cell.core.client.ButtonCell;
+import com.sencha.gxt.core.client.Style.SelectionMode;
+import com.sencha.gxt.core.client.ValueProvider;
+import com.sencha.gxt.core.client.util.Margins;
+import com.sencha.gxt.data.shared.ListStore;
+import com.sencha.gxt.data.shared.ModelKeyProvider;
+import com.sencha.gxt.data.shared.PropertyAccess;
+import com.sencha.gxt.data.shared.SortDir;
+import com.sencha.gxt.data.shared.Store.StoreSortInfo;
+import com.sencha.gxt.widget.core.client.Window;
+import com.sencha.gxt.widget.core.client.box.AlertMessageBox;
+import com.sencha.gxt.widget.core.client.button.TextButton;
+import com.sencha.gxt.widget.core.client.container.BorderLayoutContainer.BorderLayoutData;
+import com.sencha.gxt.widget.core.client.container.BoxLayoutContainer.BoxLayoutData;
+import com.sencha.gxt.widget.core.client.event.SelectEvent;
+import com.sencha.gxt.widget.core.client.event.SelectEvent.SelectHandler;
+import com.sencha.gxt.widget.core.client.grid.ColumnConfig;
+import com.sencha.gxt.widget.core.client.grid.ColumnModel;
+import com.sencha.gxt.widget.core.client.grid.Grid;
+import com.sencha.gxt.widget.core.client.grid.GridSelectionModel;
+import com.sencha.gxt.widget.core.client.grid.GridView;
+import com.sencha.gxt.widget.core.client.selection.SelectionChangedEvent;
+import com.sencha.gxt.widget.core.client.selection.SelectionChangedEvent.SelectionChangedHandler;
 
-public class ImageAssetPicker extends DialogBox {
+public class ImageAssetPicker extends Window {
 
   private static ImageAssetPickerUiBinder uiBinder = GWT.create(ImageAssetPickerUiBinder.class);
 
@@ -60,134 +67,144 @@ public class ImageAssetPicker extends DialogBox {
     void imagePicked(String imageURL);
   }
 
+  interface GraphicalAssetDTOProvider extends PropertyAccess<GraphicalAssetDTO> {    
+    @Path("url")
+    ModelKeyProvider<GraphicalAssetDTO> key();
+    
+    ValueProvider<GraphicalAssetDTO, String> name();
+  }
+  
   @UiFactory
-  DialogBox itself() {
+  Window itself() {
     return this;
   }
 
-  private final SingleSelectionModel<GraphicalAssetDTO> selectionModel = new SingleSelectionModel<GraphicalAssetDTO>();
+  @UiField(provided = true)
+  BorderLayoutData northData = new BorderLayoutData(40);
+  @UiField(provided = true)
+  BorderLayoutData westData = new BorderLayoutData(.40);
   
-  private List<GraphicalAssetDTO> assets;
+  @UiField(provided = true)
+  BoxLayoutData addImageButtonLayoutData = new BoxLayoutData(new Margins(0, 0, 0, 8));
+  
+  private GraphicalAssetDTOProvider assets = GWT.create(GraphicalAssetDTOProvider.class);
   
   private ImageAssetPickerListener listener;
+  
+  private ColumnModel<GraphicalAssetDTO> cm;
+  private ListStore<GraphicalAssetDTO> store;
+  private GridSelectionModel<GraphicalAssetDTO> selectionModel;
+  private GridView<GraphicalAssetDTO> gridView;
   
   public void setListener(ImageAssetPickerListener listener) {
     this.listener = listener;
   }
 
   public ImageAssetPicker(final String currentImageURL) {
-    uiBinder.createAndBindUi(this);
-    mainLayout.setSize("50em", "20em");
-    okButton.setEnabled(false);
-    
-    getElement().getStyle().setZIndex(Integer.MAX_VALUE - 1); // TODO: check how we can be sure of the value to use
+    westData.setSplit(true);
 
-    
-    // TODO:
-    
-    // Recheck behaviour when moving with keyboard
-    // Difference between line focus (yellow) and selection (blue)
-    // Line focus should trigger preview
-    
-    
-    Column<GraphicalAssetDTO, String> column = new Column<GraphicalAssetDTO, String>(new ButtonCell() {
-      @Override
-      public void render(Context context, SafeHtml data, SafeHtmlBuilder sb) {
-        if (data != null) {
-          ImageResource icon = IconResources.INSTANCE.delete();
-          SafeHtml html = SafeHtmlUtils.fromTrustedString(AbstractImagePrototype.create(icon).getHTML());
-          sb.append(html);
-        }
-      }
-    }) {
+    ColumnConfig<GraphicalAssetDTO, String> deleteColumn = new ColumnConfig<GraphicalAssetDTO, String>(new ValueProvider<GraphicalAssetDTO, String>() {
       @Override
       public String getValue(GraphicalAssetDTO object) {
         return "";
       }
-    };
-    column.setFieldUpdater(new FieldUpdater<GraphicalAssetDTO, String>() {
+
       @Override
-      public void update(int index, final GraphicalAssetDTO object, String value) {        
+      public void setValue(GraphicalAssetDTO object, String value) {
+      }
+
+      @Override
+      public String getPath() {
+        return "";
+      }
+    }, 38, "");
+    deleteColumn.setResizable(false);
+    deleteColumn.setMenuDisabled(true);
+    ButtonCell<String> button = new ButtonCell<String>();
+    button.setIcon(IconResources.INSTANCE.delete());
+    button.addSelectHandler(new SelectHandler() {
+      @Override
+      public void onSelect(SelectEvent event) {
+        Context c = event.getContext();
+        int row = c.getIndex();
+        final GraphicalAssetDTO object = store.get(row);
+        
         if (isImageInUse(object.getName())) {
-          // TODO: this gets displayed behind our panel !!! -> re-check when everything moved to GXT 3
-          
-          MessageBox.alert("Warn", "The image is used and can't be deleted.", null);
+          new AlertMessageBox("Delete error", "The image is used and can't be deleted.").show();
         } else {          
           UtilsProxy.deleteImage(object.getName(), new AsyncCallback<Void>() {
 
             @Override
             public void onSuccess(Void result) {
-              assets.remove(object);
-              if (selectionModel.getSelectedObject() != null) {
-                selectionModel.setSelected(selectionModel.getSelectedObject(), false);
+              if (selectionModel.getSelectedItem() == object) {
+                selectionModel.deselect(selectionModel.getSelectedItem());
                 imagePreview.setVisible(false);
               }
-              table.setRowData(assets);
+              store.remove(object);
             }
 
             @Override
             public void onFailure(Throwable caught) {
-              // TODO
+              new AlertMessageBox("Communication error", "Could not read assets library from server.").show();
             }
-            
           });
         }
       }
     });
-    table.addColumn(column);
+    deleteColumn.setCell(button);
+
+    ColumnConfig<GraphicalAssetDTO, String> fileNameColumn = new ColumnConfig<GraphicalAssetDTO, String>(assets.name(), 150, "Name");
     
-    TextColumn<GraphicalAssetDTO> fileNameColumn = new TextColumn<GraphicalAssetDTO>() {
-      @Override
-      public String getValue(GraphicalAssetDTO asset) {
-        return asset.getName();
-      }
-    };
-    table.addColumn(fileNameColumn, "Name");
-    table.setSelectionModel(selectionModel);
+    List<ColumnConfig<GraphicalAssetDTO, ?>> l = new ArrayList<ColumnConfig<GraphicalAssetDTO, ?>>();
+    l.add(deleteColumn);
+    l.add(fileNameColumn);
+    cm = new ColumnModel<GraphicalAssetDTO>(l);
+    store = new ListStore<GraphicalAssetDTO>(assets.key());
+    store.addSortInfo(new StoreSortInfo<GraphicalAssetDTO>(assets.name(), SortDir.ASC));
     
-    selectionModel.addSelectionChangeHandler(new SelectionChangeEvent.Handler() {      
-      @Override
-      public void onSelectionChange(SelectionChangeEvent event) {
-        okButton.setEnabled(selectionModel.getSelectedObject() != null);
-        imagePreview.setUrl(selectionModel.getSelectedObject().getUrl());
-        imagePreview.setVisible(true);
-      }
-    });
+    uiBinder.createAndBindUi(this);
+
+    gridView.setAutoExpandColumn(fileNameColumn);
     
     UtilsProxy.getUserImagesURLs(new AsyncSuccessCallback<List<GraphicalAssetDTO>>() {
       @Override
       public void onSuccess(List<GraphicalAssetDTO> result) {
-        assets = result;
-        sortAssets();
-        table.setRowData(result);
-        selectImage(currentImageURL, result);
+        store.addAll(result);
+        selectImage(currentImageURL);
+        gridView.focusRow(store.getAll().indexOf(selectionModel.getSelectedItem()));
       }
-
     });
   }
 
-  @UiField
-  DockLayoutPanel mainLayout;
+  @UiFactory
+  Grid<GraphicalAssetDTO> createGrid() {
+    Grid<GraphicalAssetDTO> grid = new Grid<GraphicalAssetDTO>(store, cm);
+    selectionModel = grid.getSelectionModel();
+    selectionModel.setSelectionMode(SelectionMode.SINGLE);
+    selectionModel.addSelectionChangedHandler(new SelectionChangedHandler<GraphicalAssetDTO>() {
+      @Override
+      public void onSelectionChanged(SelectionChangedEvent<GraphicalAssetDTO> event) {
+        okButton.setEnabled(selectionModel.getSelectedItem() != null);
+        imagePreview.setVisible(selectionModel.getSelectedItem() != null);        
+        if (selectionModel.getSelectedItem() != null) {
+          imagePreview.setUrl(selectionModel.getSelectedItem().getUrl());
+        }
+      }
+    });
+    gridView = grid.getView();
+    return grid;
+  }
 
-  @UiField
-  CellTable<GraphicalAssetDTO> table;
-  
   @UiField
   Image imagePreview;
   
   @UiField
-  Button cancelButton;
-  
-  @UiField
-  Button okButton;
-  
-  @UiField
-  Button addButton;
+  TextButton okButton;
   
   @UiHandler("addButton")
-  void handleAdd(ClickEvent e) {
+  void onAddClick(SelectEvent e) {
     ChangeIconWindow selectImageONWindow = new ChangeIconWindow(new IconPreviewWidget(100, 100), 100);
-    getElement().getStyle().setZIndex(Integer.parseInt(selectImageONWindow.getElement().getStyle().getZIndex()) - 1);
+//    getElement().getStyle().setZIndex(Integer.parseInt(selectImageONWindow.getElement().getStyle().getZIndex()) - 1);
     setModal(false);
     
     selectImageONWindow.addListener(Events.Hide, new Listener<BaseEvent>() {
@@ -201,35 +218,35 @@ public class ImageAssetPicker extends DialogBox {
        @Override
        public void afterSubmit(SubmitEvent be) {
          final String imageUrl = be.getData();
-         assets.add(new GraphicalAssetDTO(imageUrl.substring(imageUrl.lastIndexOf("/") + 1), imageUrl));
-         sortAssets();
-         table.setRowData(assets);
-         selectImage(imageUrl, assets);
+         store.add(new GraphicalAssetDTO(imageUrl.substring(imageUrl.lastIndexOf("/") + 1), imageUrl));
+         selectImage(imageUrl);
+         gridView.focusRow(store.getAll().indexOf(selectionModel.getSelectedItem()));
        }
     });
 
   }
 
   @UiHandler("cancelButton")
-  void handleCancel(ClickEvent e) {
+  public void onCancelClick(SelectEvent event) {
     hide();
   }
 
   @UiHandler("okButton")
-  void handleOK(ClickEvent e) {
+  public void onOKClick(SelectEvent event) {
     if (listener != null) {
-      listener.imagePicked(selectionModel.getSelectedObject().getUrl());
+      listener.imagePicked(selectionModel.getSelectedItem().getUrl());
     }
     hide();
   }
 
-  private void selectImage(final String currentImageURL, List<GraphicalAssetDTO> result) {
-    for (GraphicalAssetDTO ga : result) {
+  private void selectImage(final String currentImageURL) {
+    for (GraphicalAssetDTO ga : store.getAll()) {
       if (ga.getUrl().equals(currentImageURL) || ga.getName().equals(currentImageURL)) { // TODO: testing also on image name, not nice but used for states on image widgets
-        selectionModel.setSelected(ga, true);
+        selectionModel.select(ga,  false);
         break;
       }
     }
+    // Note if comparison on name is not required, then can use directly Store.findModelWithKey()    
   }
   
   private boolean isImageInUse(String imageName) {
@@ -277,13 +294,5 @@ public class ImageAssetPicker extends DialogBox {
     }
     return false;
   }
-  
-  private void sortAssets() {
-    Collections.sort(assets, new Comparator<GraphicalAssetDTO>() {
-      @Override
-      public int compare(GraphicalAssetDTO o1, GraphicalAssetDTO o2) {
-        return o1.getName().compareToIgnoreCase(o2.getName());
-      }           
-     });
-  }
+
 }
