@@ -1,10 +1,11 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
-	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:c='urn:import:com.google.gwt.user.cellview.client'>
+	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:c='urn:import:com.google.gwt.user.cellview.client' xmlns:container="urn:import:com.sencha.gxt.widget.core.client.container"
+  xmlns:gxt="urn:import:com.sencha.gxt.widget.core.client" xmlns:button="urn:import:com.sencha.gxt.widget.core.client.button" xmlns:grid="urn:import:com.sencha.gxt.widget.core.client.grid">
 
   <ui:style>
    .imagePreviewStyle {
-      margin: 10px;
+      margin: 6px;
       padding: 2px;
       border-style: solid;
       border-width: 1px;
@@ -12,41 +13,36 @@
     }
   </ui:style>
 
-	<g:DialogBox autoHide="false" modal="true">
-		<g:caption>
-			<b>Image Asset Picker</b>
-		</g:caption>
-		<g:FormPanel>
-			<g:DockLayoutPanel unit="EM" ui:field="mainLayout">
-				<g:north size="4">
-					<g:HorizontalPanel>
-						<g:Label />
-						<g:Button ui:field="addButton">Add image</g:Button>
-					</g:HorizontalPanel>
-				</g:north>
-				<g:south size="4">
-					<g:LayoutPanel>
-						<g:layer left="35%" width="6em">
-              <g:Button ui:field="okButton">OK</g:Button>
-						</g:layer>
-						<g:layer right="35%" width="6em">
-              <g:Button ui:field="cancelButton">Cancel</g:Button>
-						</g:layer>
-					</g:LayoutPanel>
-				</g:south>
-				<g:center>
-					<g:LayoutPanel>
-						<g:layer left="0%" width="40%">
-							<g:ScrollPanel width='100%'>
-								<c:CellTable width='100%' ui:field='table' />
-							</g:ScrollPanel>
-						</g:layer>
-						<g:layer right="0%" width="60%">
-							<g:Image styleName='{style.imagePreviewStyle}' ui:field="imagePreview" />
-						</g:layer>
-					</g:LayoutPanel>
-				</g:center>
-			</g:DockLayoutPanel>
-		</g:FormPanel>
-	</g:DialogBox>
-</ui:UiBinder> 
+  <ui:with type="com.sencha.gxt.widget.core.client.container.BoxLayoutContainer.BoxLayoutData" field="addImageButtonLayoutData"/>
+      
+  <ui:with type="com.sencha.gxt.widget.core.client.container.BorderLayoutContainer.BorderLayoutData" field="northData" />
+  <ui:with type="com.sencha.gxt.widget.core.client.container.BorderLayoutContainer.BorderLayoutData" field="westData" />
+  
+  <gxt:Window pixelSize="600, 300" modal="true" blinkModal="true" headingText="Image Asset Picker" focusWidget="{cancelButton}">
+    <container:BorderLayoutContainer borders="true">
+      <container:north layoutData="{northData}">
+        <container:HBoxLayoutContainer hBoxLayoutAlign="MIDDLE" pack="START">
+          <container:child layoutData="{addImageButtonLayoutData}">
+            <button:TextButton text="Add image" ui:field="addButton"/>
+          </container:child>
+        </container:HBoxLayoutContainer>
+      </container:north>
+      <container:west layoutData="{westData}">
+        <grid:Grid/>
+      </container:west>
+      <container:center>
+	      <container:VerticalLayoutContainer>
+	        <container:child>
+		        <g:Image styleName='{style.imagePreviewStyle}' ui:field="imagePreview" />
+		      </container:child>
+	      </container:VerticalLayoutContainer>
+      </container:center>
+    </container:BorderLayoutContainer>
+    <gxt:button>
+      <button:TextButton text="OK" enabled="false" ui:field="okButton"/>
+    </gxt:button>
+    <gxt:button>
+      <button:TextButton text="Cancel" ui:field="cancelButton"/>
+    </gxt:button>
+  </gxt:Window>
+ </ui:UiBinder>
